Finished styling every section of the page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <nav>
+        <a href="#top">Top</a>
+        <a href="#man">The Man</a>
+        <a href="#harem">The Harem</a>
+        <a href="#read">Read for free</a>
+    </nav>
 </head>
 <body>
-    <div class="container blue">
+    <div id="top" class="container blue">
         <div class="subcontainer">
             <h1>Mercenary Enrollment</h1>
             <h1>입학용병</h1>
@@ -15,10 +21,26 @@
         </div>
        <img id="ijin" src="https://i.ibb.co/chF3DCD/dedugou-8d312cbd-b410-45e5-83d4-7eac490c46b0.png" alt="dedugou-8d312cbd-b410-45e5-83d4-7eac490c46b0" border="0" />
     </div>
-    <div class="bio-container grey">
+    <div id="man" class="bio-container grey">
         <h1>The Man</h1>
-        <img id="ijin-biopic" src="https://s4.anilist.co/file/anilistcdn/character/large/b196891-MvIgbsIz8gEj.jpg" alt="ijin-bio">
-        <h3>At the age of eight, I-Jin Yu lost his parents in a plane crash and became stranded in a foreign land, forced to become a child mercenary in order to stay alive. He returns home ten years later to be reunited with his family in Korea, where food and shelter are plenty and everything seems peaceful. But I-Jin will soon learn that life as a teenager is a whole other feat of survival. With only one year of high school left, I-Jin must master new tactics to maneuver his way around the schoolhouse battleground. Can he survive a year of high school? Or rather, will the school be able to survive him?</h3>
+        <div class="bio-subcontainer">
+            <img class="biopic" src="https://s4.anilist.co/file/anilistcdn/character/large/b196891-MvIgbsIz8gEj.jpg" alt="ijin-bio">
+            <p>At the age of eight, I-Jin Yu lost his parents in a plane crash and became stranded in a foreign land, forced to become a child mercenary in order to stay alive. He returns home ten years later to be reunited with his family in Korea, where food and shelter are plenty and everything seems peaceful. But I-Jin will soon learn that life as a teenager is a whole other feat of survival. With only one year of high school left, I-Jin must master new tactics to maneuver his way around the schoolhouse battleground. Can he survive a year of high school? Or rather, will the school be able to survive him?</p>
+        </div>
+    </div>
+    <div id="harem" class="harem-container">
+        <h1>The Harem</h1>
+            <div class="harem-subcontainer">                    
+                <img id="third" class="biopic" src="https://s4.anilist.co/file/anilistcdn/character/large/b208591-KIKr6OiIWd2r.png" alt="yeona">
+                <img id="first" class="biopic" src="https://s4.anilist.co/file/anilistcdn/character/large/b276382-OQxeVaxUDbeq.png" alt="seoha">
+                <img id="second" class="biopic" src="https://i.pinimg.com/originals/98/e9/87/98e98732eca4a4c1031444b79ceb3fae.jpg" alt="jiye">
+            </div>
+    </div>
+    <div id="read" class="journey-container">
+        <a href="https://mercenaryenrollment.org/"><h1>Click here to read for free</h1></a>
+        <div class="journey-subcontainer">
+            <img src="https://i.ibb.co/JHwpgBC/Ijin-Yu-1.webp" alt="Ijin-Yu-1"/>
+        </div>
     </div>
 </body>
 </html>
